css/main.css
body {
    padding: 1em;
    background-color: #eed;
    font-size: large;
}

body {
    font-family: elamicon;
}

input, textarea {
    font-family: elamiconmono;
}

h1, h2 {
    text-align: center
}

@font-face {
    font-family: 'elamicon';
    src: url('../fonts/ElamiconLiberationSerif-Regular.ttf');
}

@font-face {
    font-family: 'elamicon';
    src: url('../fonts/ElamiconLiberationSerif-Bold.ttf');
    font-weight: bold;
}

@font-face {
    font-family: 'elamiconmono';
    src: url('../fonts/ElamiconLiberationMono-Regular.ttf');
}

.elam {
    unicode-bidi: bidi-override;
}

.alphabet {
    padding: 0;
    list-style-type: none;
}

.alphabet li {
    margin: 0.2em;
    display: inline-block;
    background-color: #eed;
    border-left: 0.3em solid #ffffe8;
    border-top: 0.3em solid #ffffe8;
    border-right: 0.3em solid #d0d0c8;
    border-bottom: 0.3em solid #d0d0c8;
}

.alphabet div {
    padding: 0.3em;

    color: rgba(100, 100, 100, 0.8);
    text-shadow: #eed 0.03ex 0.03ex 0.05ex, #000 0 0 0;
}

.letter {
    text-align: center;
    vertical-align: top;
    position: relative;
}

.letter .counter {
    position: absolute;
    top: 0;
    right: 0;
    font-size: small;
    font-weight: bold;
}

.letter .main {
    font-size: 300%;
    cursor: pointer;
}


.letter .ext {
    font-size: 80%;
    display: inline;
}

.letter .menu {
    float: left;
    text-align: center;

    display: none;
}

.letter:hover .menu {
    display: block;
    position: absolute;
    left: -0.3em;
    right: -0.3em;

    z-index: 1;
    background-color: #eed;
    border-left: 0.3em solid #ffffe8;
    border-right: 0.3em solid #d0d0c8;
    border-bottom: 0.3em solid #d0d0c8;
}

.letter .menu .ext {
    display: inline-block;
    font-size: 200%;

    cursor: pointer;
}



input {
    width: 100%;
}


.plate {
    vertical-align: top;
    margin: 0 2em;
    display: inline-block;
}

h2 {
    margin-top: 2em;
}

h1, h2, .fragment {
    /* horizontal rules between the lines */
    line-height: 1em;
    background: linear-gradient(to bottom, #000 0%, #000 6%, #ffffe8 6%) 0 0;
    background-size: 100% 1em;
    padding-bottom: 0.06em; /* so the bottom rule is visible */
}

.fragment {
    font-size: 200%;
    margin-top: 0;
    padding-left: 0.1em;
    padding-right: 0.1em;
}

.fragment[dir=RTL] {
    text-align: right;
}

.fixedBreak {
    /* custom line counter */
    position: relative;
    list-style: none;
    counter-reset: lines;
}

.fixedBreak[dir=LTR] {
    /* custom line counter */
    margin-left: 4em;
}

.fixedBreak[dir=RTL] {
    /* custom line counter */
    margin-right: 4em;
}



.line {
    unicode-bidi: bidi-override; /* not inherited through display: block */
    counter-increment: lines;
    display: inline-block;
}

.highlight {
    height: 1em;
    display: inline-block;
    color: #c2bfc4;
    background: #685771; /* fallback */
    background: linear-gradient(to bottom, #000 0%, #000 6%, #685771 6%) 0 0;

}

.fixedBreak .line {
    display: block;
}

/* custom line counter */
.fixedBreak .line:before {
    content: counter(lines, upper-roman);
    position: absolute;
    font-size: 50%;
}

.fixedBreak .fragment[dir=LTR] .line:before {
    text-align: right;
    left: -2em;
}

.fixedBreak .fragment[dir=RTL] .line:before {
    text-align: left;
    right: -2em;
}


h2 {
    clear: both;
}


textarea {
    width: 100%;
    height: 5em;
    font-size: 200%;
}

label {
    display: block;
}

.clear {
    clear: both;
}

.footer {
    padding: 1em;
    text-align: center;
}

